Update block loot provider
- define data components for special flower NBT (streaks, cooldowns, etc.)
- replace all the obsolete NBT loot table operations with data component logic
- generate silktouch conditions again
- move generator logic from a standalone DataProvider to a BlockLootSubProvider that is used with a small Fabric-specific wrapper to get rid of most vanilla-copying boilerplate code
- run Xplat datagen